# underscore_quad

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  STYLE.md  gamepad.example.toml  main.py
.github/workflows/: gui-artifacts.yml
.opencode/profiles/system/: AGENTS.md
djI_tello/: underscore_quad.sh
djI_tello/python/: joysticktest.py  main.py  underscore_quad.sh
python/: main.py  requirements.txt
src/: frame_input.rs  logging.rs  main.rs  terminal_ui.rs  tui_arg_select.rs
src/camera/: capabilities.rs  capture.rs  convert.rs  device.rs  mod.rs  pixel_format.rs  unsupported.rs
src/cli/: mod.rs
src/fps/: counter.rs  mod.rs
src/gamepad/: collector.rs  config.rs  mapping.rs  mod.rs  types.rs  worker.rs
src/overlay/: draw.rs  mod.rs  rect.rs
src/picker/: filter.rs  mod.rs  render.rs  state.rs
src/ui/: app.rs  capture_settings.rs  device_picker.rs  display_settings.rs  gamepad_panel.rs  latency.rs  latency_table.rs  mod.rs  status_bar.rs  theme.rs  top_bar.rs  video_view.rs  worker.rs
