[package]
name = "underscore_quad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
