[package]
name = "underscore_quad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
eframe = "0.33.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
rscam = "0.5.5"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
zune-jpeg = "0.4.13"
