[package]
name = "underscore_quad"
version = "0.1.0"
description = "Low-latency UVC camera viewer with an egui desktop interface"
edition = "2021"

[package.metadata.bundle]
name = "underscore_quad"
identifier = "io.github.victoryforphil.underscore-quad"
short_description = "Low-latency UVC camera viewer"
category = "Developer Tool"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = "0.28"
eframe = "0.33.0"
egui_extras = "0.33.0"
env_logger = "0.10.2"
gilrs = "0.11.1"
log = "0.4.28"
nu-ansi-term = "0.50"
rscam = "0.5.5"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.8.19"
zune-jpeg = "0.4.13"
